<resources>
    <string name="app_name">MedicalApt</string>
    <string name="logout">Logout</string>
    <string name="admin_area">Admin Area</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="medical_appointment_tracker">Medical Apt Tracker</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="admin_user">Admin User</string>
    <string name="standard_user">Standard User</string>
    <string name="admin_feature_message">Admin feature goes here</string>
    <string name="enter_username_password">Please enter a password and password</string>
    <string name="invalid_credentials">Invalid username or password.</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="admin">ADMIN</string>
    <string name="Admin">ADMIN</string>
    <string name="patient">patient</string>
    <string name="enter_patient_name">enter patient name</string>
    <string name="dob">dOB</string>
    <string name="enter_date_of_birth">enter date of birth</string>
    <string name="sex">sex</string>
    <string name="enter_the_sex_of_patient">enter the sex of patient</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="save">Save</string>
    <string name="Logout">Logout</string>
    <string name="create_as_admin">Create as admin</string>
    <string name="save_account">Save Account</string>
    <string name="cancel">Cancel</string>
    <string name="that_username_already_exists">That username already exists.</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="notes_optional">Notes Optional</string>
    <string name="save_appointment">Save Appointment</string>
    <string name="no_appointments_yet">No Appointments Yet</string>
    <string name="your_appointments">Your appointments:</string>
    <string name="appointment_id_to_delete">Appointment ID to Delete</string>
    <string name="delete_appointment">Delete Appointment</string>
</resources>